📝 계획 💡PR 예정 핵심적으로 변경된 사항 - PR 피드백 반영 중입니다. - 피드백 주신 내용 반영하여 Space Parameter가 enum으로 변경됨에 따라 Service, Repository, Controller 계층을 모두 변경했습니다.
- Controller : recommend/spaces/{spaceId}/chores => recommend/spaces/{space}/chores 로 변경되었습니다.

- Repository : SpaceRepository 제거되었습니다.

- DTO : SpaceChoreResponse, SpaceResponse 모두 제거되었으며, 조회를 위한 DTO는 ChoreResponse를 사용합니다.

- Service : 공간에 따른 집안일 조회 시 랜덤 로직은 제거되었습니다. 빈 리스트 반환 기능 제거하였습니다.
- 공간 카테고리 리스트 조회 : name과 description만 나타나게 변경하였습니다.

- ServiceTest, ControllerTest도 그에 걸맞게 변경하였으며, 이상 없음을 확인하였습니다.

To Do

📢이외 추가 변경 부분 및 기타
- Chore Entity Space Parameter 변경 (String -> Space)
✅ 테스트
 테스트 코드 작성 완료 -> 작성 예정
 API 테스트 진행 완료 -> 진행 예정